--- a/i/in/ins/installpath.com.html
+++ b/i/in/ins/installpath.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the installpath.com privacy policy that was archived on 2013-08-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130810205129id_/http%3A//www.installpath.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the installpath.com privacy policy that was archived on 2014-02-17.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140217080815id_/http%3A//www.installpath.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 	<title>InstallPath Install Manager - Privacy Policy</title>
@@ -30,7 +30,7 @@
 		&nbsp;</span></b></p>
 		<p class="MsoNormal" dir="LTR" style="margin-bottom:0cm;margin-bottom:.0001pt;
 text-align:left;line-height:normal;direction:ltr;unicode-bidi:embed">
-		Last modified on April 8, 2013.</p>
+		Last modified on January1, 2014.</p>
 		<p class="MsoNormal" dir="LTR" style="margin-bottom:0cm;margin-bottom:.0001pt;
 text-align:left;line-height:normal;direction:ltr;unicode-bidi:embed">
 		&nbsp;</p>
@@ -44,7 +44,7 @@ line-height:15.0pt;direction:ltr;unicode-bidi:embed">
 line-height:15.0pt;direction:ltr;unicode-bidi:embed">
 		During your use of the InstallPath Install Manager delivery and 
 		installation platform ("InstallPath") for the purpose of installing the 
-		Software or digital content, InstallPath Install Manager gathers 
+		Software, Updates, or digital content, InstallPath Install Manager gathers 
 		information from your computer. Amonetize understands that You wish to 
 		keep your information private, and that You value our emphasis on 
 		keeping your information safe and discrete. As a result we have posted 
@@ -107,7 +107,8 @@ line-height:15.0pt;direction:ltr;unicode-bidi:embed">
 		Software are compatible with your computer ; by determining which 
 		Additional Software and of what version should be offered to You and 
 		installed on your computer; by correlating errors with certain Technical 
-		Information for debugging purposes; and by creating and managing 
+		Information for debugging purposes;  by installing Updates and Modules on your
+		computer; and by creating and managing 
 		statistics to guide future improvements and developments.</p>
 		<p class="MsoNormal" dir="LTR" style="margin-bottom:15.0pt;text-align:left;
 line-height:15.0pt;direction:ltr;unicode-bidi:embed">
@@ -125,7 +126,7 @@ line-height:15.0pt;direction:ltr;unicode-bidi:embed">
 		<p class="MsoNormal" dir="LTR" style="margin-bottom:15.0pt;text-align:left;
 line-height:15.0pt;direction:ltr;unicode-bidi:embed">
 		This Personal Information is used by our servers in order to improve 
-		InstallPath Install Manager operation and services and to present You 
+		InstallPath Install Manager operation and services,to install Updates and Modules on your computer and to present You 
 		with Offers which are better suited for You.</p>
 		<p class="MsoNormal" dir="LTR" style="margin-bottom:15.0pt;text-align:left;
 line-height:15.0pt;direction:ltr;unicode-bidi:embed">
@@ -138,7 +139,7 @@ line-height:15.0pt;direction:ltr;unicode-bidi:embed">
 		In addition we may gather information regarding the installation 
 		process, including with regard to the Offers presented to You via 
 		InstallPath Install Manager, The Approved Offers installed on your 
-		computer and Technical Information regarding the installation process, 
+		computer Updates and Technical Information regarding the installation process, 
 		such as, without limitation, success/failure, duration, malfunctions, 
 		errors, etc. (the "Installation Information").</p>
 		<p class="MsoNormal" dir="LTR" style="margin-bottom:15.0pt;text-align:left;
@@ -270,20 +271,12 @@ line-height:15.0pt;direction:ltr;unicode-bidi:embed">
 		Children Protection</p>
 		<p class="MsoNormal" dir="LTR" style="margin-bottom:15.0pt;text-align:left;
 line-height:15.0pt;direction:ltr;unicode-bidi:embed">
-		Regardless of the aforementioned, we do not knowingly collect or store 
-		information regarding children under the age of 13. If we learn that we 
-		have collected personal information from a child under age 13, we will 
-		delete that information as quickly as possible. If you believe that we 
-		might have any information from a child under age 13, please contact us 
-		through our support page currently available at contact@InstallPath.com.</p>
-		<p class="MsoNormal" dir="LTR" style="margin-bottom:15.0pt;text-align:left;
-line-height:15.0pt;direction:ltr;unicode-bidi:embed">
-		Information Warranty Disclaimer</p>
-		<p class="MsoNormal" dir="LTR" style="margin-bottom:15.0pt;text-align:left;
-line-height:15.0pt;direction:ltr;unicode-bidi:embed">
-		Notwithstanding anything else in this Policy, we are not responsible for 
-		the accuracy, correctness and security of any of the information we 
-		gather, store and disclose to You or to anyone else.</p>
+		Regardless of the aforementioned, we do not knowingly collect or store information
+		regarding children under the age of 18. If we learn that we have collected personal
+		information from a child under age 18, we will delete that information as quickly as
+		possible. If you believe that we might have any information from a child under age
+		18, please contact us through our support page currently available at 
+		contact@InstallPath.com.</p>
 		<p class="MsoNormal" dir="LTR" style="margin-bottom:15.0pt;text-align:left;
 line-height:15.0pt;direction:ltr;unicode-bidi:embed">
 		Review and Deletion</p>
@@ -408,6 +401,19 @@ line-height:15.0pt;direction:ltr;unicode-bidi:embed">
 		the Privacy Policy as so modified. It is therefore important that you 
 		review this Privacy Policy regularly. The last revision will be 
 		reflected in the "Last modified by" heading above.</p>
+		<p class="MsoNormal" dir="LTR" style="margin-bottom:15.0pt;text-align:left;
+line-height:15.0pt;direction:ltr;unicode-bidi:embed">
+		All questions and issues regarding this privacy policy or the data that is being 
+		collected and stored should be delivered to InstallPath's designated privacy 
+		agent at the following address:<br>
+
+		InstallPath<br>
+		Amonetize Ltd.<br>
+		6 Ha’masger Street<br>
+		Raanana, 43662, Israel<br>
+		Phone: +972-9-7733001<br>
+		Email: contact @ InstallPath.com</p>
+		
 		<p dir="LTR" style="margin-top:0cm;margin-right:0cm;margin-bottom:15.0pt;
 margin-left:0cm;line-height:15.0pt">
 		Enforcement, 
@@ -440,8 +446,8 @@ line-height:15.0pt;direction:ltr;unicode-bidi:embed">
 		</div>
 
 		<div id="footer"><br>
-		 <a href="/">InstallPath</a> | <a href="contact-us.html">Contact Us</a> | <a href="privacy.html">InstallPath Install Manager Privacy Policy</a> | <a href="eula.html">InstallPath Install Manager End User License agreement</a> <br> <a href="dmca.html">InstallPath Install Manager DMCA</a> | <a href="terms.html">InstallPath Install Terms of Service</a> | <a href="uninstall.html">Uninstall InstallPath Install Manager</a> <br> <a href="website-terms.html">Website Terms of Service and Privacy Policy</a> <br>
-		 © 2012-2013 Amonetize Ltd., All rights reserved worldwide
+		 <a href="/">InstallPath</a> | <a href="contact-us.html">Contact Us</a> | <a href="privacy.html">InstallPath Install Manager Privacy Policy</a> | <a href="eula.html">InstallPath Install Manager End User License agreement</a> <br> <a href="dmca.html">InstallPath Install Manager DMCA</a> | <a href="terms.html">InstallPath Install Manager Terms of Service</a> | <a href="uninstall.html">Uninstall InstallPath Install Manager</a> <br> <a href="website-terms.html">Website Terms of Service and Privacy Policy</a> <br>
+		 © 2012-2014 Amonetize Ltd., All rights reserved worldwide
 		</div>
 	
 	</div>
