--- a/m/mo/mon/moneymakergroup.com.html
+++ b/m/mo/mon/moneymakergroup.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the moneymakergroup.com privacy policy that was archived on 2008-08-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080803162949id_/http%3A//moneymakergroup.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the moneymakergroup.com privacy policy that was archived on 2014-02-17.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140217091734id_/http%3A//www.moneymakergroup.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 
