--- a/w/wh/wha/whatiwear.com.html
+++ b/w/wh/wha/whatiwear.com.html
@@ -1,24 +1,19 @@
-<!--The following is the downloaded HTML source of the whatiwear.com privacy policy that was archived on 2013-08-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130812105608id_/http%3A//www.whatiwear.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the whatiwear.com privacy policy that was archived on 2014-02-17.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140217145016id_/http%3A//www.whatiwear.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#" xmlns:fb="https://www.facebook.com/2008/fbml"><head>
 <title>PRIVACY | WhatIWear.com</title>
-<script id="facebook-jssdk" async="" src="//connect.facebook.net/en_US/all.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script async="" src="//ajax.cloudflare.com/cdn-cgi/nexp/abv=340409193/cloudflare.min.js"></script><script type="text/javascript">
+<script async="" src="//www.google-analytics.com/analytics.js"></script><script id="facebook-jssdk" async="" src="//connect.facebook.net/en_US/all.js"></script><script async="" src="//ajax.cloudflare.com/cdn-cgi/nexp/dok8v=221574e73d/cloudflare.min.js"></script><script type="text/javascript">
 //<![CDATA[
-window.__CF=window.__CF||{};window.__CF.AJS={"abetterbrowser":{"ie":"8"}};
-//]]>
-</script>
-<script type="text/javascript">
-//<![CDATA[
-try{if (!window.CloudFlare) { var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",mirage:{responsive:0,lazy:0},mirage2:0,oracle:0,paths:{cloudflare:"/cdn-cgi/nexp/abv=2908400176/"},atok:"a777c9cda061dd1aa440456cd8827f4a",zone:"whatiwear.com",rocket:"0",apps:{"abetterbrowser":{"ie":"8"}}}];var a=document.createElement("script"),b=document.getElementsByTagName("script")[0];a.async=!0;a.src="//ajax.cloudflare.com/cdn-cgi/nexp/abv=340409193/cloudflare.min.js";b.parentNode.insertBefore(a,b);}}catch(e){};
+try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",bag2:1,mirage2:0,oracle:0,paths:{cloudflare:"/cdn-cgi/nexp/dok8v=02fcfa4f56/"},atok:"714bbfee059294da13e56edf14e17d66",petok:"fd8f84a27adfd3b46a256daa27af27d13c88a026-1392648615-1800",zone:"whatiwear.com",rocket:"0",apps:{"abetterbrowser":{"ie":"8"}}}];var a=document.createElement("script"),b=document.getElementsByTagName("script")[0];a.async=!0;a.src="//ajax.cloudflare.com/cdn-cgi/nexp/dok8v=221574e73d/cloudflare.min.js";b.parentNode.insertBefore(a,b);}}catch(e){};
 //]]>
 </script>
 <link rel="stylesheet" type="text/css" href="http://www.whatiwear.com/themes/bakau/css/combined.css"><script src="http://www.whatiwear.com/static/assets/combined.js"></script>
 <link id="page_favicon" href="http://www.whatiwear.com/favicon.ico" rel="icon" type="image/x-icon">
 <base href="http://www.whatiwear.com/">
+<meta name="google-site-verification" content="KTxkjF3plwoM_hNU69xdlB0VGNce-2TGTK5Ya9Iui4U">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta http-equiv="refresh" content="1800">
-<meta name="description" content="Every day is a fashion show and the world is your runway. Our vision is to gather all the fashion lovers in the world to come together to inspire &amp; be inspired by each others' unique style, one wardrobe at a time --">
+<meta http-equiv="refresh" content="1800"><meta name="description" content="Every day is a fashion show and the world is your runway. Our vision is to gather all the fashion lovers in the world to come together to inspire &amp; be inspired by each others' unique style, one wardrobe at a time --">
 <meta name="keywords" content="fashion inspiration, hype, collective fashion consciousness, real people">
  
 <meta property="og:site_name" content="www.whatiwear.com">
@@ -39,16 +34,7 @@ try{if (!window.CloudFlare) { var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",mi
     }
     var userId = '';
 </script>
-<link type="text/css" href="http://www.whatiwear.com/static/js/facebox/facebox.css" rel="stylesheet">
-<script>
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-            ga('create', 'UA-42557607-1', 'whatiwear.com');
-            ga('send', 'pageview');
-        </script>
+<link rel="stylesheet" type="text/css" href="http://www.whatiwear.com/themes/bakau/css/newcomers.css">
 </head>
 <body>
 <style>.Wiw-Logo{background-image:url("http://www.whatiwear.com/themes/bakau/img/icon_all.png");background-repeat:no-repeat;background-position:-1856px -1122px;display:inline-block;float:left;height:50px;margin-left:30px;width:60px;}#main-menu-right-container{background:url('http://www.whatiwear.com/themes/bakau/img/main-menu-logo.png') no-repeat scroll 60px -11px transparent;}</style>
@@ -72,9 +58,6 @@ try{if (!window.CloudFlare) { var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",mi
 <a href="http://blog.whatiwear.com" target="_blank" class="show-sub-menu">BLOG</a> </li>
 <li class="main-menu-link-container left">
 <a href="" class="show-sub-menu" rel-id="sub-menu-about">ABOUT</a>
-</li>
-<li class="main-menu-link-container left">
-<a href="javascript:void(0)" class="show-sub-menu" style="color: #f63;" rel-id="sub-menu-stylespotter">* STYLE SPOTTER CONTEST *</a>
 </li>
 </ul>
 </div>
@@ -103,9 +86,8 @@ Lets get social in fashion’s trend and be inspired.</span>
 <div><a href="http://www.whatiwear.com/new">NEW LOOKS</a></div>
 </div>
 <div id="sub-menu-article" class="sub-menu-content">
-<div id="showbanner" style="cursor: pointer;">ANNOUNCEMENT</div>
 <div><a href="http://www.whatiwear.com/leader">LEADER</a></div>
-<div><a href="http://www.whatiwear.com/interview">INTERVIEW</a></div>
+<div></div>
 </div>
 <div id="sub-menu-about" class="sub-menu-content">
 <div><a href="http://www.whatiwear.com/contact">CONTACT US</a></div>
@@ -123,6 +105,22 @@ Lets get social in fashion’s trend and be inspired.</span>
 <div class="clearfix" style="height:5px;"></div>
 </div>
 <div class="clearfix"></div>
+<style>.option-content{position:relative;line-height:3em;font-size:12px;width:480px;}.col-1,.col-3{float:left;display:inline-block;vertical-align:middle;margin:0px;padding:0px;border:none;}.col-3{}.option-content a{text-decoration:none;color:white;background:#f63;text-align:center;vertical-align:middle;width:180px;line-height:4em;font-size:16px;font-weight:bold;}#upload_option{display:none;}</style>
+<div id="upload_option">
+<div class="option-content">
+<div>
+<div style="width: 240px;display: inline-block;">SYNC FROM YOUR BLOG</div>
+<div style="width: 236px;display: inline-block;">UPLOAD LOOKS FROM YOUR DESKTOP</div>
+</div>
+</div>
+<div class="option-content" style="background: white; width: 480px;">
+<div class="col-3" style="left: 56px;">
+<a href="http://www.whatiwear.com/blog_import" class="col-1">IMPORT FROM BLOG</a>
+<span class="col-1" style="width: 60px; font-size: 16px; text-align: center; line-height: 5em;">OR</span>
+<a href="http://www.whatiwear.com/look" class="col-1">UPLOAD PHOTO</a>
+</div>
+</div>
+</div>
 <script>
     (function($){
         // Show advance container
@@ -136,11 +134,19 @@ Lets get social in fashion’s trend and be inspired.</span>
                 });
                 $('div.look-list').show();
             } else {
+                var load = '<div style="text-align:center;min-height:500px;">'+
+                                '<div class="waiting" style="width:200px;margin:100px auto 0;"></div>'+
+                            '</div>';
+                $searchWrapper.html(load)
+                              .fadeIn();
+                
                 $.get(siteurl+'q/search',function(data){
                     $searchWrapper.html(data).css({
                         height:window.innerHeight,
                         width:window.innerWidth
-                    }).show();
+                    }).fadeIn('fast', function(){
+                        $('#basic_search').focus();
+                    });
                 });
             }
         }
@@ -149,9 +155,10 @@ Lets get social in fashion’s trend and be inspired.</span>
         $.fn.closeSearch = function(){
             $('#searchwrapper').fadeOut('fast');
             $('#basic_search').val('');
-        }
+        };
     })(jQuery);
-</script> <div id="wrapper" class="clearfix">
+</script>
+<div id="wrapper" class="clearfix">
 <div id="content">
 <style>.mini-list{color:#666;font-family:opensans-regular;font-size:11px;letter-spacing:0.5px;line-height:20px;list-style-type:circle;margin-left:14px;max-width:780px;}.submenu{border-bottom:1px solid #ccc;color:#f63;padding:15px 2.5% 15px 35px;}#accordion-list>li{margin-bottom:30px;}#accordion-list li h1{color:#666;cursor:pointer;font-size:14px;letter-spacing:0.25px;line-height:12px;margin:0 0 15px;}#accordion-list li p,#accordion-list li ul,.paragraph{color:#666;font-family:opensans-regular;font-size:11px;letter-spacing:0.5px;line-height:20px;}#accordion-list li p,#accordion-list li ul{display:none;max-width:800px;}.paragraph{border-bottom:1px solid #ccc;padding:20px 35px;}</style>
 <div class="background-pattern-1 submenu">WHATIWEAR PRIVACY POLICY</div>
@@ -314,29 +321,28 @@ your acceptance of such change.</p>
 <div class="clearfix"></div>
 </div>
 </form>
-</div>
-<div id="fb-root"></div>
+</div><div id="fb-root"></div>
 <script>
-                // Load the SDK Asynchronously
-                (function(d){
-                    var js, id = 'facebook-jssdk', ref = d.getElementsByTagName('script')[0];
-                    if (d.getElementById(id)) {return;}
-                    js = d.createElement('script'); js.id = id; js.async = true;
-                    js.src = "//connect.facebook.net/en_US/all.js";
-                    ref.parentNode.insertBefore(js, ref);
-                }(document));
+    // Load the SDK Asynchronously
+    (function(d){
+        var js, id = 'facebook-jssdk', ref = d.getElementsByTagName('script')[0];
+        if (d.getElementById(id)) {return;}
+        js = d.createElement('script'); js.id = id; js.async = true;
+        js.src = "//connect.facebook.net/en_US/all.js";
+        ref.parentNode.insertBefore(js, ref);
+    }(document));
 
-                // Facebook connect
-                window.fbAsyncInit = function() {
-                    FB.init({
-                        appId   : '128307290593186',
-                        oauth   : true,
-                        status  : true, // check login status
-                        cookie  : true, // enable cookies to allow the server to access the session
-                        xfbml   : true // parse XFBML
-                    });
-                };
-            </script>
+    // Facebook connect
+    window.fbAsyncInit = function() {
+        FB.init({
+            appId   : '128307290593186',
+            oauth   : true,
+            status  : true, // check login status
+            cookie  : true, // enable cookies to allow the server to access the session
+            xfbml   : true // parse XFBML
+        });
+    };
+</script>
 <img src="http://www.whatiwear.com/themes/bakau/img/wow.png" id="wow-loader" class="wow-loader" style="display:none;">
 <img src="http://www.whatiwear.com/themes/bakau/img/unwow.png" id="unwow-loader" class="unwow-loader" style="display:none;">
 <div class="scrolltop"></div>
@@ -347,9 +353,7 @@ your acceptance of such change.</p>
 <div class="waiting look"></div>
 </div>
 <div id="slideshow-container" style="display:none"></div>
-<div id="bannerplace">
-</div>
-<div id="searchwrapper" style="display:none;position:fixed;top:0;left:0;z-index:1000;"></div>
+<div id="searchwrapper" style="display:none;position:fixed;top:0;left:0;z-index:1000;width:100%;"></div>
 <div id="navigation-container">
 <div class="" style="height:45px;font-size:14px;color:#666;">
 <div class="floatleft header" style="border-right: 1px solid #CCC;">
@@ -515,6 +519,15 @@ Show detail of the look</span></td>
         });
     })(jQuery);
 </script> <script src="//maps.googleapis.com/maps/api/js?sensor=false&amp;libraries=places"></script>
+<script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-42557607-1', 'whatiwear.com');
+            ga('send', 'pageview');
+        </script>
 
 
 </body></html>
