--- a/a/af/aff/affbuzz.com.html
+++ b/a/af/aff/affbuzz.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the affbuzz.com privacy policy that was archived on 2013-12-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131215002737id_/http%3A//affbuzz.com/page/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the affbuzz.com privacy policy that was archived on 2014-02-17.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140217184005id_/http%3A//affbuzz.com/page/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 	<meta charset="utf-8">
@@ -47,7 +47,7 @@
 				var abkw = window.abkw || '';
 				var absrc = 'http://ab161318.adbutler-photon.com/adserve/;ID=161318;size=468x60;setID=157136;type=js;kw='+abkw+';pid='+pid157136+';place='+(plc157136++)+';rnd='+rnd+'';
 				document.write('<scr'+'ipt src="'+absrc+'" type="text/javascript"></scr'+'ipt>');
-			</script><script src="http://ab161318.adbutler-photon.com/adserve/;ID=161318;size=468x60;setID=157136;type=js;kw=;pid=2011635;place=0;rnd=2011635" type="text/javascript"></script>
+			</script><script src="http://ab161318.adbutler-photon.com/adserve/;ID=161318;size=468x60;setID=157136;type=js;kw=;pid=7028734;place=0;rnd=7028734" type="text/javascript"></script>
     	</div>
     </div>
     <div class="top_menu">	
@@ -60,43 +60,37 @@
 </div>
 		<div id="body">
 			<div id="content">
-				<div id="body">
-<div id="subhead">affiliate marketing news aggregator</div>
-
-<div id="privacy" style="margin-top: 80px;">
-<h2>Privacy Policy</h2>
-
-<p>Your privacy is very important to us. Accordingly, we have developed this Policy in order for you
-to understand how we collect, use, communicate and disclose and make use of personal information. 
-The following outlines our privacy policy.</p>
-
-<p>Before or at the time of collecting personal information, we will identify the purposes for which
-information is being collected.</p>
-
-<p>We will collect and use of personal information solely with the objective of fulfilling those 
-purposes specified by us and for other compatible purposes, unless we obtain the consent of the
-individual concerned or as required by law.</p>
-
-<p>We will only retain personal information as long as necessary for the fulfillment of those
-purposes.</p>
-
-<p>We will collect personal information by lawful and fair means and, where appropriate, with the 
-knowledge or consent of the individual concerned.</p>
-
-<p>Personal data should be relevant to the purposes for which it is to be used, and, to the extent
-necessary for those purposes, should be accurate, complete, and up-to-date.</p>
-
-<p>We will protect personal information by reasonable security safeguards against loss or theft, as
-well as unauthorized access, disclosure, copying, use or modification.</p>
-
-<p>We will make readily available to customers information about our policies and practices 
-relating to the management of personal information.</p>
-
-<p>We are committed to conducting our business in accordance with these principles in order to 
-ensure that the confidentiality of personal information is protected and maintained.</p>
-</div>
-
-<!--? display('FOOTER'); ?-->
+					<div id="privacy">
+		<h2>Privacy Policy</h2>
+		
+		<p>Your privacy is very important to us. Accordingly, we have developed this Policy in order for you
+		to understand how we collect, use, communicate and disclose and make use of personal information. 
+		The following outlines our privacy policy.</p>
+		
+		<p>Before or at the time of collecting personal information, we will identify the purposes for which
+		information is being collected.</p>
+		
+		<p>We will collect and use of personal information solely with the objective of fulfilling those 
+		purposes specified by us and for other compatible purposes, unless we obtain the consent of the
+		individual concerned or as required by law.</p>
+		
+		<p>We will only retain personal information as long as necessary for the fulfillment of those
+		purposes.</p>
+		
+		<p>We will collect personal information by lawful and fair means and, where appropriate, with the 
+		knowledge or consent of the individual concerned.</p>
+		
+		<p>Personal data should be relevant to the purposes for which it is to be used, and, to the extent
+		necessary for those purposes, should be accurate, complete, and up-to-date.</p>
+		
+		<p>We will protect personal information by reasonable security safeguards against loss or theft, as
+		well as unauthorized access, disclosure, copying, use or modification.</p>
+		
+		<p>We will make readily available to customers information about our policies and practices 
+		relating to the management of personal information.</p>
+		
+		<p>We are committed to conducting our business in accordance with these principles in order to 
+		ensure that the confidentiality of personal information is protected and maintained.</p>
 
 </div>
 			</div>
@@ -163,11 +157,12 @@ ensure that the confidentiality of personal information is protected and maintai
 	<script src="http://static.getclicky.com/91516.js" type="text/javascript"></script>
 	<div id="site-links">
 		© affbuzz.com |
-		<a href="http://affbuzz.com/about">about/suggest a site</a> |
+		<a href="http://affbuzz.com/page/about">about/suggest a site</a> |
 		<a href="http://affbuzz.com/blog/">blog</a> |
 		<a href="#" onclick="UserVoice.Popin.show(); return false;">feedback</a> |
 		<a href="http://twitter.com/affbuzz">follow affbuzz on twitter</a> | 
 		<a href="http://affbuzz.com/page/advertise">advertise</a> | 
+		<a href="http://affbuzz.com/affiliate-industry-info">affiliate industry info</a> | 
 		<a href="http://affbuzz.com/page/privacy">privacy policy</a> |
 		<a href="">terms of service</a>
 	</div>
