--- a/f/fl/fly/flyordie.com.html
+++ b/f/fl/fly/flyordie.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the flyordie.com privacy policy that was archived on 2013-08-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130807064703id_/http%3A//www.flyordie.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the flyordie.com privacy policy that was archived on 2014-02-17.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140217224232id_/http%3A//www.flyordie.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -102,6 +102,7 @@ This is generally used for geotargeting purposes or showing certain ads based on
 You can choose to disable or selectively turn off our cookies or third-party cookies in your browser settings.  
 However, this can affect how you are able to interact with our site as well as other websites.  
 
+
 </p>
 
 <p>
@@ -109,6 +110,11 @@ We use third-party advertising companies to serve ads when you visit our Web sit
 These companies may use aggregated information (not including your name, address, email address or telephone number) about your visits to this and other Web sites in order to provide advertisements about goods and services of interest to you. 
 If you would like more information about this practice and to know your choices about not having this information used by these companies, please see: <a href="http://www.networkadvertising.org/managing/opt_out.asp" target="_blank" rel="NOFOLLOW">http://www.networkadvertising.org/managing/opt_out.asp</a>.
 
+</p>
+<p>
+Third parties, like Google, may collect certain types of information about visits to FlyOrDie's websites, 
+including interaction with content on these sites. 
+As always, no personally identifiable information will be collected. 
 </p>
 
 <span class="orangetitle">Links</span>
@@ -124,7 +130,7 @@ This web site contains links to other sites. Please be aware that FlyOrDie is no
 
 
 
-<p class="small">Last updated: May 2, 2013
+<p class="small">Last updated: Dec 11, 2013
 </p>
 
 <span class="copyright">Copyright © 2009 <a href="http://www.flyordie.com" target="_blank" title="Flyordie Online Games">FlyOrDie.com</a>. All rights reserved.<br>FlyOrDie © is a registered trademark of Solware Ltd.</span>
