--- a/p/po/por/portea.com.html
+++ b/p/po/por/portea.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the portea.com privacy policy that was archived on 2013-12-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131226013455id_/http%3A//www.portea.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the portea.com privacy policy that was archived on 2014-02-18.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140218005216id_/http%3A//www.portea.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -15,7 +15,7 @@
 <link href="css/style.css" rel="stylesheet" type="text/css">
 
 <!-- ALL JAVASCRIPT FILES HERE -->
-<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="js/jquery.js"></script>
+<script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/jquery.validation.js"></script>
 <script type="text/javascript" src="js/angelsquery.js"></script>
 
@@ -33,7 +33,17 @@
   })();
 </script>
 
-</head>
+<!-- GA tracking code -->
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-46990936-1', 'portea.com');
+  ga('send', 'pageview');
+</script>
+<script async="true" type="text/javascript" src="https://s.adroll.com/j/roundtrip.js"></script></head>
 
 <body>
 <div id="outer-wrap">
@@ -340,6 +350,25 @@ function submitform()
 	<img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/998361122/?value=0&amp;guid=ON&amp;script=0"/>
 	</div>
 	</noscript>
+
+ <script type="text/javascript">
+     adroll_adv_id = "YR53Y66GDJDKXPZSMD55QH";
+     adroll_pix_id = "LEBBHWV2KFCLFHEKNAN5AT";
+     (function () {
+         var oldonload = window.onload;
+         window.onload = function(){
+             __adroll_loaded=true;
+             var scr = document.createElement("script");
+             var host = (("https:" == document.location.protocol) ? "https://s.adroll.com" : "http://a.adroll.com");
+             scr.setAttribute('async', 'true');
+             scr.type = "text/javascript";
+             scr.src = host + "/j/roundtrip.js";
+             ((document.getElementsByTagName('head') || [null])[0] ||
+                 document.getElementsByTagName('script')[0].parentNode).appendChild(scr);
+             if(oldonload){oldonload()}};
+     }());
+ </script>
+
 
 
 <!-- Included Footer --></body></html>
