--- a/f/fr/fre/freedict.com.html
+++ b/f/fr/fre/freedict.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the freedict.com privacy policy that was archived on 2013-11-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131114015647id_/http%3A//freedict.com/onldict/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the freedict.com privacy policy that was archived on 2014-02-18.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140218014539id_/http%3A//www.freedict.com/onldict/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title>Privacy Statement</title>
