--- a/c/ca/car/carcabin.com.html
+++ b/c/ca/car/carcabin.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the carcabin.com privacy policy that was archived on 2013-01-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130117163855id_/http%3A//www.carcabin.com/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the carcabin.com privacy policy that was archived on 2014-02-18.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140218044510id_/http%3A//www.carcabin.com/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -11,6 +11,8 @@
 <!-- Place this tag in your head or just before your close body tag -->
 <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
 <script type="text/javascript">if(parent.location != self.location){parent.location=self.location;}</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="/fb-slideout.js"></script>
 <script async="" src="http://widgets.amung.us/small.js"></script></head>
 <body>
 <div id="header">
@@ -208,6 +210,16 @@ Google Adsense</p><br>
 	</div>
 </div>
 <!-- // Footer End -->
+
+<div id="slidebox"> <a class="close"></a>
+<center id="last">
+<big>Follow us on Facebook!</big>
+<div align="absmiddle">
+<div id="fb-root"></div><script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script>
+<div class="fb-like" data-href="https://www.facebook.com/pages/Best-Vines/292160470924508" data-width="300" data-show-faces="true" data-send="false"></div>
+</div>
+</center></div>
+<strong id="slideboxlast"></strong>
 
 <!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
