--- a/g/ge/gee/geekculture.com.html
+++ b/g/ge/gee/geekculture.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the geekculture.com privacy policy that was archived on 2013-08-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130815030103id_/http%3A//www.geekculture.com/culture/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the geekculture.com privacy policy that was archived on 2014-02-18.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140218051704id_/http%3A//www.geekculture.com/culture/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
@@ -8,14 +8,9 @@
 		<meta name="keywords" content="contact geek culture, buy, send photo, geekosphere, computers, poems, love, geek, horror stories, mind numbing job, communication, discussion forums, talk to us, submit">
 		<meta content="How to contact Geek Cultureª. You can phone, fax, email, and snailmail.">
 		</head><body bgcolor="white" link="#993300" alink="#cc6666" vlink="#996666" onload="CSScriptInit();"><csscriptdict>
-			<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" src="//ajax.cloudflare.com/cdn-cgi/nexp/abv=340409193/cloudflare.min.js"></script><script type="text/javascript">
+			<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" src="//ajax.cloudflare.com/cdn-cgi/nexp/dok8v=221574e73d/cloudflare.min.js"></script><script type="text/javascript">
 //<![CDATA[
-window.__CF=window.__CF||{};window.__CF.AJS={"ga_key":{"ua":"UA-1003668-1","ga_bs":"1"},"vig_key":{"sid":"4a24261e4cd515384d0ec96ddce0720c"}};
-//]]>
-</script>
-<script type="text/javascript">
-//<![CDATA[
-try{if (!window.CloudFlare) { var CloudFlare=[{verbose:0,p:1375557803,byc:0,owlid:"cf",mirage:{responsive:0,lazy:0},mirage2:0,oracle:0,paths:{cloudflare:"/cdn-cgi/nexp/abv=833003145/"},atok:"5a1c99bdf67a663e4267cf107df4b208",zone:"geekculture.com",rocket:"0",apps:{"ga_key":{"ua":"UA-1003668-1","ga_bs":"1"},"vig_key":{"sid":"4a24261e4cd515384d0ec96ddce0720c"}}}];var a=document.createElement("script"),b=document.getElementsByTagName("script")[0];a.async=!0;a.src="//ajax.cloudflare.com/cdn-cgi/nexp/abv=340409193/cloudflare.min.js";b.parentNode.insertBefore(a,b);}}catch(e){};
+try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",bag2:1,mirage2:0,oracle:0,paths:{cloudflare:"/cdn-cgi/nexp/dok8v=02fcfa4f56/"},atok:"f877ec609c19c85614027e5b1310efd3",petok:"0a992c11806e3f5c2484d2d72d92afbcbf4cafa6-1392700624-1800",zone:"geekculture.com",rocket:"0",apps:{"the_day_we_fight_back":{"callOnly":"false"},"vig_key":{"sid":"4a24261e4cd515384d0ec96ddce0720c"},"ga_key":{"ua":"UA-1003668-1","ga_bs":"1"}}}];var a=document.createElement("script"),b=document.getElementsByTagName("script")[0];a.async=!0;a.src="//ajax.cloudflare.com/cdn-cgi/nexp/dok8v=221574e73d/cloudflare.min.js";b.parentNode.insertBefore(a,b);}}catch(e){};
 //]]>
 </script>
 <script><!--
